--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <html><body><h1>It works!</h1>
-<p>This was set up by Allen Baker in a custom directory.</p>
-<p>This is the default web page for this server.</p>
+<p>This was set up by Allen Baker in the IPRO 343 Comm Git directory.</p>
+<p>This is the default web page for the BeagleBone server.</p>
 <p>The web server software is running but no content has been added, yet.</p>
 </body></html>
