--- a/www/index.html
+++ b/www/index.html
@@ -2,4 +2,7 @@
 <p>This was set up by Allen Baker in the IPRO 343 Comm Git directory.</p>
 <p>This is the default web page for the BeagleBone server.</p>
 <p>The web server software is running but no content has been added, yet.</p>
+
+<p>To view a DHTML example, go <a href="Example.html">here</a>.
+<p>To view a JavaScript timer example, go <a href="Stop_Timer.html">here</a>.
 </body></html>
