Another CGI example.
Added another CGI example. This one calls a C program that gets the
system time and outputs a formatted-string representation of it. The
JavaScript then displays the formatted string onto the page. The next
step is to insert a timeout to call this C program repeatedly to see if
the time will update on the page.

--- a/www/index.html
+++ b/www/index.html
@@ -7,4 +7,5 @@
 <p>To view a DHTML example, go <a href="Example.html">here</a>.
 <p>To view a JavaScript timer example, go <a href="Stop_Timer.html">here</a>.
 <p>To view a CGI Example, go <a href="CGI_Example.html">here</a>.
+<p>To view another CGI Example, go <a href="CGI_Example2.html">here</a>.
 </body></html>
