--- a/www/CGI_Example2.html
+++ b/www/CGI_Example2.html
@@ -1,25 +1,22 @@
 <head>
 	<script
-		type="text/javascript"
-		language="JavaScript">
-		<!--
-		CurrentTime='Nothing here yet.';
-		//-->
-	</script>
-
-	<script
 		src="/cgi-bin/gettime"
 		type="text/javascript"
 		language="JavaScript">
-	</script>
+    </script>
 
-	<script
-		type="text/javascript"
-		language="Javascript">
-		<!--
-		document.write(CurrentTime);
-		//-->
-	</script>
+    <script
+        type="text/javascript"
+        language="Javascript">
+        <!--
+
+        var t;
+
+        document.write(UpdateTime());
+        t = setTimeout (function() {location.reload()}, 1000);
+
+        //-->
+    </script>
 </head>
 <body>
 </body>
