--- a/www/index.html
+++ b/www/index.html
@@ -8,4 +8,5 @@
 <p>To view a JavaScript timer example, go <a href="Stop_Timer.html">here</a>.
 <p>To view a CGI Example, go <a href="CGI_Example.html">here</a>.
 <p>To view another CGI Example, go <a href="CGI_Example2.html">here</a>.
+<p>To view the Analog Value, go <a href="AnalogValue.html">here</a>.
 </body></html>
